Add checkbox to hide issues that have been closed in Gitlab. Improves readability.

--- a/src/app.css
+++ b/src/app.css
@@ -42,6 +42,12 @@ a.issue.is-done {
     opacity: .4;
 }
 
+#hideClosedIssues {
+    width: inherit;
+    display: inline-block;
+    margin-right: 5px;
+}
+
 .form_field {
     margin-bottom: 8px;
 }
